# THOR

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-pr.yml  smoke-test.yml  testing-and-coverage.yml
benchmarks/: asv.conf.json  benchmarks.py
docs/notebooks/: Develop_Rates_Simulations.ipynb  Develop_Redback_Simulations.ipynb  Example_LSST_Catalog_Crossmatching.ipynb  Example_Visualizing_LSST_Observations.ipynb
src/thor/: catalogs_catalog.py  crossmatch_alerts.py  summarize_rubin_alerts.py
src/thor/alert_stream/: babamul_stream.ipynb  filter_functions.py  lsst_catalogue_crossmatch.ipynb  rubin_stats.ipynb  rubin_stats_functions.py
src/thor/simulations/: boom_filter.py  boom_filter_dev.ipynb  highz_funcs.py  redback_simulations.ipynb
src/thor/utils/: fetch_alerts.py  filter_functions.py  lightcurve_sims.py  prost_catalogs.py  rates_sims.py  redback_sims.py  rubin_stats_visualizations.py
tests/thor/: test_example_module.py  test_packaging.py
